# wsf_test

./: .gitignore  Makefile  README.md  minobr_scrape_list.csv  pyproject.toml  setup.cfg
.github/workflows/: main.yml
scraper/: cli.py  html.py  io.py  loader.py  logging.py  rename.py  storage.py
scraper/scripts/: main.py
tests/: test_html.py  test_images.py  test_rename.py  utils.py
tests/fixtures/: name_list.csv  page_with_images.html  parent_page.html
